--- a/src/components/overlay/index.css
+++ b/src/components/overlay/index.css
@@ -260,9 +260,6 @@
     }
 
     & .Overlay-content {
-      /*display: flex;
-      align-items: center;*/
-      /*flex-direction: column;*/
       margin: 50px auto 0;
       max-width: 990px;
       min-height: 450px;
